--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,20 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
 {% block content %}
-    <style>
-        body {
-            min-height: 100vh
-        }
-
-        .text-gray {
-            color: #aaa
-        }
-
-        img {
-            height: 170px;
-            width: 140px
-        }
-    </style>
     <br>
     <div class="container">
         <form method="GET" action="{{ request.path }}">
@@ -29,37 +15,64 @@
             </div>
         </form>
         <br><br>
-        <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <ul class="list-group shadow">
+        <div class="container d-flex justify-content-center mt-50 mb-50">
+            <div class="row">
+                <div class="col-md-12">
                     {% for item in itemList %}
-                        <li class="list-group-item">
-                            <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-                                <div class="media-body order-2 order-lg-1">
-                                    <a class="mt-0 font-weight-bold mb-2" style="font-size: 15px;"
-                                       href={% url 'core:item-view' pk=item.id %}>{{ item.title }}</a>
-                                    <p class="font-italic text-muted mb-0 small">{{ item.description|truncatechars:100 }}</p>
-                                    <div class="d-flex align-items-center justify-content-between mt-1">
-                                        <h6 class="font-weight-bold my-2">£{{ item.price }}</h6>
-                                        <ul class="list-inline small">
-                                            <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i>
-                                            </li>
-                                            <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i>
-                                            </li>
-                                            <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i>
-                                            </li>
-                                            <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i>
-                                            </li>
-                                            <li class="list-inline-item m-0"><i class="fa fa-star-o text-gray"></i></li>
-                                        </ul>
-                                    </div>
+                        <div class="card card-body mt-3">
+                            <div class="media align-items-center align-items-lg-start text-center text-lg-left flex-column flex-lg-row">
+                                <div class="mr-2 mb-3 mb-lg-0">
+                                    <img src="https://i.imgur.com/Aj0L4Wa.jpg" width="150" height="150" alt="">
                                 </div>
-                                <img class="ml-lg-5 order-1 order-lg-2" src="{{ item.images.all.first.image.url }}" alt="" width="200">
+                                <div class="media-body">
+                                    <h6 class="media-title font-weight-semibold">
+                                        <a href="{% url 'core:item-view' pk=item.pk %}"
+                                           data-abc="true">{{ item.title }}</a>
+                                    </h6>
+                                    <ul class="list-inline list-inline-dotted mb-3 mb-lg-2">
+                                        <li class="list-inline-item">
+                                            <span class="text-muted"
+                                                  data-abc="true">{{ item.get_condition_display }}</span>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <span class="text-muted" data-abc="true">{{ item.get_type_display }}</span>
+                                        </li>
+                                        {% if item.type == 'AUCTION' %}
+                                            <li class="list-inline-item">
+                                                <span class="text-muted"
+                                                      data-abc="true">Expires at {{ item.expireDate }}</span>
+                                            </li>
+                                        {% endif %}
+                                    </ul>
+                                    <p class="mb-3">256 GB ROM | 15.49 cm (6.1 inch) Display 12MP Rear Camera | 15MP
+                                        Front
+                                        Camera A12 Bionic Chip Processor | Gorilla Glass with high quality display </p>
+                                    <ul class="list-inline list-inline-dotted mb-0">
+                                        <li class="list-inline-item">All items from <a href="#" data-abc="true">Mobile
+                                            junction</a>
+                                        </li>
+                                        <li class="list-inline-item">Add to <a href="#" data-abc="true">wishlist</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="mt-3 mt-lg-0 ml-lg-3 text-center">
+                                    <h3 class="mb-0 font-weight-semibold">£{{ item.price }}</h3>
+                                    <div>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                    <div class="text-muted">2349 reviews</div>
+                                    <button type="button" class="btn btn-warning mt-4 text-white">
+                                        <i class="icon-cart-add mr-2"></i> Add to cart
+                                    </button>
+                                </div>
                             </div>
-                        </li>
-                        <br>
+                        </div>
                     {% endfor %}
-                </ul>
+                </div>
             </div>
         </div>
     </div>
