--- a/core/templates/core/itemView.html
+++ b/core/templates/core/itemView.html
@@ -74,8 +74,7 @@
                         <div class="small mb-1">SKU: BST-498</div>
                         <h1 class="display-5 fw-bolder">{{ item.title }}</h1>
                         <div class="fs-5 mb-5">
-                            <span class="text-decoration-line-through">$45.00</span>
-                            <span>$40.00</span>
+                            <span class="text-decoration-line-through">£{{ item.price }}</span>
                         </div>
                         <p class="lead">{{ item.description|truncatechars:100 }}</p>
                         <div class="d-flex">
