items from user, cart fix and review starts

--- a/core/templates/core/itemView.html
+++ b/core/templates/core/itemView.html
@@ -1,6 +1,7 @@
 {% extends "core/base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load templateTags %}
 {% block content %}
 
     <style>
@@ -71,19 +72,13 @@
                         <br>
                     </div>
                     <div class="col-md-6">
-                        <div class="small mb-1">SKU: BST-498</div>
                         <h1 class="display-5 fw-bolder">{{ item.title }}</h1>
                         <div class="fs-5 mb-5">
                             <span class="text-decoration-line-through">£{{ item.price }}</span>
                         </div>
                         <p class="lead">{{ item.description|truncatechars:100 }}</p>
                         <div class="d-flex">
-                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1"
-                                   style="max-width: 3rem">
-                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                                <i class="bi-cart-fill me-1"></i>
-                                Add to cart
-                            </button>
+                            {% itemCartButton request item %}
                         </div>
                     </div>
                 </div>
