--- a/core/templates/core/itemsFromUser.html
+++ b/core/templates/core/itemsFromUser.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-md-12" style="width: 1100px;">
                     {% for item in itemList %}
-                        {% renderItemCatalogue request item showSeller='True' %}
+                        {% renderItemCatalogue request item showSeller='False' %}
                     {% endfor %}
                 </div>
             </div>
