--- a/core/templates/core/newListing.html
+++ b/core/templates/core/newListing.html
@@ -8,35 +8,7 @@
             <h2>Add New Item</h2>
             <br>
             {% csrf_token %}
-            <div class="form-group">
-                <label for="itme-name">Item Name</label>
-                <input type="text" class="form-control" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="description">Item Description</label>
-                <textarea class="form-control" id="description" name="description" rows="5" required></textarea>
-            </div>
-            <div class="form-group">
-                <label for="condition">Item Condition</label>
-                <select class="form-control" id="condition" name="condition">
-                    {% for condition in itemConditionList %}
-                        <option value="{{ condition.0 }}">{{ condition.1 }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="itme-name">Item End Date/Time (Select if you want to auction this listing)</label>
-                <input type="datetime-local" class="form-control" id="expire-date" name="expire-date">
-            </div>
-            <div class="form-group">
-                <label for="itme-name">Price (£)</label>
-                <input type="number" class="form-control" id="price" name="price" min="0" step=".01" required>
-            </div>
-            <div class="form-group">
-                <label for="itme-name">Upload Item Images</label>
-                <input type="file" class="form-control" id="images" name="images" multiple required>
-                <!-- class="form-control-file btn btn-default" -->
-            </div>
+            {{ form|crispy }}
             <button type="submit" class="btn btn-outline-success btn-lg btn-block">Post Item</button>
         </form>
     </div>
