delivery charge field, add new images on edit, delete image

--- a/core/templates/core/editListing.html
+++ b/core/templates/core/editListing.html
@@ -1,14 +1,25 @@
 {% extends "core/base.html" %}
+{% load templateTags %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+    <style>
+    /* Needed for item image positions and delete button */
+    .img-wraps{position:relative;display:inline-block;font-size:0}
+    .img-wraps.closes{position:absolute;top:2px;right:2px;z-index:100;background-color:#fff;padding:4px 3px;color:#000;cursor:pointer;text-align:center;font-size:17px;line-height:10px;border-radius:50%;border:1px solid #000}
+    </style>
     <div class="container">
         <br>
         <form method="post" enctype="multipart/form-data">
-            <h2>Add New Item</h2>
+            <h2>Edit Item</h2>
             <br>
             {% csrf_token %}
             {{ form|crispy }}
+            {% for image in item.itemImage.all %}
+                {% renderItemImage item image %}
+            {% endfor %}
+            <br>
+            <br>
             <button type="submit" class="btn btn-outline-success btn-lg btn-block">Update Item</button>
         </form>
     </div>
