--- a/core/templates/core/userPurchases.html
+++ b/core/templates/core/userPurchases.html
@@ -4,22 +4,12 @@
 {% block content %}
     <br>
     <div class="container">
-        <form method="GET" action="{{ request.path }}">
-            <div class="row">
-                <div class="col">
-                    <input type="text" id="query" name="query" class="form-control col"
-                           placeholder="Search your listings" required/>
-                </div>
-                <div class="col-auto">
-                    <input type="submit" class="btn btn-outline-primary" value="Search"/>
-                </div>
-            </div>
-        </form>
+        {% querySearchComponent request %}
         <br><br>
         <div class="row">
             <div class="col-md-12" style="width: 1100px;">
                 {% for order in orderList %}
-                    {% renderItemCatalogueWithOrderFurtherDetailsComponent order %}
+                    {% renderItemCatalogueWithOrderFurtherDetailsComponent order orderStatusList %}
                 {% endfor %}
             </div>
         </div>
