--- a/core/templates/core/cartView.html
+++ b/core/templates/core/cartView.html
@@ -2,37 +2,5 @@
 {% load static %}
 {% load templateTags %}
 {% block content %}
-    <section class="h-100 h-custom">
-        <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col card card-body p-4">
-                    <div class="row">
-                        <div class="col-lg-7">
-                            <h5 class="mb-3">
-                                <a href="{% url 'core:index-view' %}" class="text-body">
-                                    <i class="fas fa-long-arrow-alt-left me-2"></i> Continue
-                                    shopping</a>
-                            </h5>
-                            <hr>
-                            <div class="d-flex justify-content-between align-items-center mb-4">
-                                <div>
-                                    <p class="mb-1">Shopping cart</p>
-                                    <p class="mb-0">You have {{ itemList.count }} items in your cart</p>
-                                </div>
-                            </div>
-                            {% for item in itemList %}
-                                {% renderItemCartProductCatalogue item %}
-                            {% endfor %}
-                        </div>
-                        <div class="col-lg-5">
-                            <form method="post">
-                                {% csrf_token %}
-                            {% renderCardDetailsInputComponent itemList %}
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    {% renderCartViewTemplate request itemList %}
 {% endblock %}
