--- a/core/templates/core/itemsFromUser.html
+++ b/core/templates/core/itemsFromUser.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-12" style="width: 1100px;">
                 {% for item in itemList %}
-                    {% renderItemCatalogue request item showSeller='False' %}
+                    {% renderItemCatalogue request item showItemImage='True' showSeller='False' showItemSellingDetails='True' showPurchaseOrderDetails='False' showItemPricingAndReviewDetails='True' showOrderDetailsAndMoreAction='False' %}
                 {% endfor %}
             </div>
         </div>
