--- a/core/templates/core/userPurchases.html
+++ b/core/templates/core/userPurchases.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-12" style="width: 1100px;">
                 {% for order in orderList %}
-                    {% renderItemCatalogueWithOrderFurtherDetailsComponent order orderStatusList %}
+                    {% renderItemCatalogue request order.item showItemImage='True' showSeller='False' showItemSellingDetails='False' showPurchaseOrderDetails='True' showItemPricingAndReviewDetails='False' showOrderDetailsAndMoreAction='True' order=order orderStatusList=orderStatusList %}
                 {% endfor %}
             </div>
         </div>
