model refactor and all view refactor

--- a/core/templates/core/editListing.html
+++ b/core/templates/core/editListing.html
@@ -15,7 +15,7 @@
             <br>
             {% csrf_token %}
             {{ form|crispy }}
-            {% for image in item.itemImage.all %}
+            {% for image in item.itemImages.all %}
                 {% renderItemImage item image %}
             {% endfor %}
             <br>
