--- a/core/templates/core/userBids.html
+++ b/core/templates/core/userBids.html
@@ -17,7 +17,7 @@
                 </thead>
                 <tbody>
                 {% for bid in bids %}
-                    {% renderUserBidsTable bid %}
+                    {% renderUserBidsTable bid latestPriceForEachBids %}
                 {% endfor %}
                 </tbody>
             </table>
