--- a/core/templates/core/itemBids.html
+++ b/core/templates/core/itemBids.html
@@ -16,8 +16,8 @@
                 {% for bid in bids %}
                     <tr>
                         <th scope="row">{{ bid.bidder.email }}</th>
-                        <th scope="row">£{{ bid.price }}</th>
-                        <th scope="row">{{ bid.createdDttm|date:'d M Y H:i:s' }}</th>
+                        <td>£{{ bid.price }}</td>
+                        <td>{{ bid.createdDttm|date:'d M Y H:i:s' }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
