--- a/core/templates/core/itemsFromUser.html
+++ b/core/templates/core/itemsFromUser.html
@@ -8,9 +8,7 @@
         <br><br>
         <div class="row">
             <div class="col-md-12" style="width: 1100px;">
-                {% for item in itemList %}
-                    {% renderItemCatalogue request item showItemImage='True' showSeller='False' showItemSellingDetails='True' showPurchaseOrderDetails='False' showItemPricingAndReviewDetails='True' showOrderDetailsAndMoreAction='False' %}
-                {% endfor %}
+                {% renderItemsFromUserViewTemplate request itemList %}
             </div>
         </div>
     </div>
