--- a/core/templates/core/userListings.html
+++ b/core/templates/core/userListings.html
@@ -25,5 +25,7 @@
                 </tbody>
             </table>
         </div>
+        <br>
+        {% paginationComponent request itemList %}
     </div>
 {% endblock %}
