--- a/core/templates/core/userPurchases.html
+++ b/core/templates/core/userPurchases.html
@@ -13,5 +13,8 @@
                 {% endfor %}
             </div>
         </div>
+
+        <br>
+        {% paginationComponent request orderList %}
     </div>
 {% endblock %}
