--- a/core/templates/core/itemView.html
+++ b/core/templates/core/itemView.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 {% load templateTags %}
 {% block content %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/carousel.css' %}"/>
     <style>
         /* Chrome, Safari, Edge, Opera */
         input::-webkit-outer-spin-button,
@@ -17,4 +18,6 @@
         }
     </style>
     {% renderItemViewComponent request item %}
+    <hr>
+    {% similarProductCarousel item %}
 {% endblock %}
