--- a/core/templates/core/userBids.html
+++ b/core/templates/core/userBids.html
@@ -22,5 +22,7 @@
                 </tbody>
             </table>
         </div>
+        <br>
+        {% paginationComponent request bids %}
     </div>
 {% endblock %}
