render order notes

--- a/core/templates/core/orderDetailView.html
+++ b/core/templates/core/orderDetailView.html
@@ -7,4 +7,7 @@
     <div class="container">
         {% renderOrderDetailViewComponent request order %}
     </div>
+    <div class="container">
+        {% renderOrderNotes request order %}
+    </div>
 {% endblock %}
