payment methods in profile

--- a/core/templates/core/profileView.html
+++ b/core/templates/core/profileView.html
@@ -26,5 +26,23 @@
                     }
                 });
         }
+
+        function deletePaymentMethod(id) {
+            fetch('{% url 'core:paymentMethodObjectApiEventVersion1Component' %}', {
+                method: 'DELETE',
+                headers: {
+                    'Content-Encoding': 'gzip',
+                    'Content-type': 'application/json',
+                    "X-CSRFToken": getCookie("csrftoken")
+                },
+                dataType: 'json',
+                body: JSON.stringify({'id': id})
+            }).then((response) => response.json())
+                .then((json) => {
+                    if (json.success) {
+                        location.reload();
+                    }
+                });
+        }
     </script>
 {% endblock %}
